# AlloProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildandrun.sh  distclean  docs.sh  initproject.sh  install_all_dependencies.sh  makexcode.sh  newproject.sh  run.sh
cmake_modules/: CMakeRunTargets.cmake  make_dep.cmake
src/: audio.cpp  common.hpp  flags.cmake  granularReverb.csd  graphics.cpp  simpleApp.cpp  simulator.cpp  simulator_app+OSC.cpp  simulator_app.cpp
